# boost-ipc

./: CMakeLists.txt  ipc.h
consumer/: CMakeLists.txt  consumer.cpp
creator/: CMakeLists.txt  creator.cpp
producer/: CMakeLists.txt  producer.cpp
